Improved styling here and there

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <li class="l-section section">
               <div class="about" id="about">
                 <div>
-                  <h1>Resume</h1>
+                  <h1 class="margin-zero">Resume</h1>
                   <button>Download
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                       <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
@@ -189,18 +189,9 @@
                       </svg>
                     <span class="btn-background"></span>
                   </button>
-                  <!--img src="assets/img/about-visual.png" alt="About Us"-->
                 </div>
                 <row>
                   <column>
-                    <h3>Education</h3>
-                    <ul>
-                      <li>
-                        B.Eng Informatics<br>
-                        University of Stellenbosch (ranked #2 in Africa by the <a href="https://www.timeshighereducation.com/student/best-universities/best-universities-africa">World University Rank</a>)<br>
-                        Golden Key
-                      </li>
-                    </ul>
                     <h3>Awards</h3>
                     <ul>
                       <li>Winner of University of Pretoria National Maths Olympiad</li>
@@ -208,18 +199,28 @@
                       <li>Winner of the SA Mathleague Olympiad</li>
                       <li>Intraprovincial Maths Olympiad team</li>
                       <li>Winner of the Mercedes Benz Innovation Challenge</li>
-                      <li>Second place in the SU Hackathon 2018</li>
-                      <li>Third place in the Capitec Hackathon 2020</li>
+                      <li>Second place in the SU Hackathon</li>
+                      <li>Third place in the Capitec Hackathon</li>
+                    </ul>
+                    <h3>Education</h3>
+                    <ul>
+                      <li style="list-style-type:none;">
+                        B.Eng Informatics<br>
+                        University of Stellenbosch<br>
+                        (ranked #2 in Africa by the <a href="https://www.timeshighereducation.com/student/best-universities/best-universities-africa">World University Rank</a>)<br>
+                        Golden Key
+                      </li>
                     </ul>
                   </column>
                   <column>
-                    <codersrank-summary username="chrisjanwust" branding="false" style="max-width: 450px;--header-bg-color: black; --preloader-color: black;"></codersrank-summary>
                     <div id="github-activity">
                       <h3>Github</h3>
                       <a href="https://github.com/ChrisjanWust">
                         <img src="assets/img/github_dump_cleaned.png" />
                       </a>
                     </div>
+                    <p></p>
+                    <codersrank-summary username="chrisjanwust" branding="false" style="max-width: 450px;--header-bg-color: black; --preloader-color: black;"></codersrank-summary>
                   </column>
                 </row>
 
