--- a/index.html
+++ b/index.html
@@ -192,27 +192,31 @@
                 </div>
                 <row>
                   <column>
-                    <h3>Awards</h3>
-                    <ul>
-                      <li>Winner of University of Pretoria National Maths Olympiad</li>
-                      <li>Top programming student in the province</li>
-                      <li>Winner of the SA Mathleague Olympiad</li>
-                      <li>Intraprovincial Maths Olympiad team</li>
-                      <li>Winner of the Mercedes Benz Innovation Challenge</li>
-                      <li>Second place in the SU Hackathon</li>
-                      <li>Third place in the Capitec Hackathon</li>
-                    </ul>
-                    <h3>Education</h3>
-                    <ul>
-                      <li style="list-style-type:none;">
-                        B.Eng Informatics<br>
-                        University of Stellenbosch<br>
-                        (ranked #2 in Africa by the <a href="https://www.timeshighereducation.com/student/best-universities/best-universities-africa">World University Rank</a>)<br>
-                        Golden Key
-                      </li>
-                    </ul>
+                    <div>
+                      <h3>Awards</h3>
+                      <ul>
+                        <li>Winner of University of Pretoria National Maths Olympiad</li>
+                        <li>Top programming student in the province</li>
+                        <li>Winner of the SA Mathleague Olympiad</li>
+                        <li>Intraprovincial Maths Olympiad team</li>
+                        <li>Winner of the Mercedes Benz Innovation Challenge</li>
+                        <li>Second place in the SU Hackathon</li>
+                        <li>Third place in the Capitec Hackathon</li>
+                      </ul>
+                    </div>
+                    <div class="hide-on-tablet">
+                      <h3>Education</h3>
+                      <ul>
+                        <li style="list-style-type:none;">
+                          B.Eng Informatics<br>
+                          University of Stellenbosch<br>
+                          (ranked #2 in Africa by the <a href="https://www.timeshighereducation.com/student/best-universities/best-universities-africa">World University Rank</a>)<br>
+                          Golden Key
+                        </li>
+                      </ul>
+                    </div>
                   </column>
-                  <column>
+                  <column class="hide-on-tablet">
                     <div id="github-activity">
                       <h3>Github</h3>
                       <a href="https://github.com/ChrisjanWust">
